# ops-platform-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/: aws.py  azure.py  github.py  gitlab.py  grafana.py  jenkins.py  router.py  splunk.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
app/middleware/: logging.py
app/models/: base.py
app/providers/: base.py
app/providers/aws/: client.py
app/providers/azure/: client.py
app/providers/github/: client.py
app/providers/gitlab/: client.py
app/providers/grafana/: client.py
app/providers/jenkins/: client.py
app/providers/splunk/: client.py
app/schemas/: common.py  health.py
app/services/: health.py
tests/: conftest.py
tests/unit/: test_health.py
